# ChangeLog for app-text/dictd
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/dictd/ChangeLog,v 1.66 2009/05/24 21:16:03 pva Exp $

*dictd-1.11.1-r1 (24 May 2009)

  24 May 2009; Peter Volkov <pva@gentoo.org> +dictd-1.11.1-r1.ebuild,
  metadata.xml:
  Added minimal USE flag, bug #268115, thank Nick White for report.

  18 Mar 2009; Joseph Jezak <josejx@gentoo.org> dictd-1.11.1.ebuild:
  Marked ~ppc for bug #250390.

  15 Mar 2009; Brent Baude <ranger@gentoo.org> dictd-1.11.1.ebuild:
  Marking dictd-1.11.1 ~ppc64 for bug 250390

  02 Mar 2009; Peter Volkov <pva@gentoo.org>
  files/dictd-1.10.11-colorit-nopp-fix.patch:
  Update fix for colorit, now it comes from upstream.

*dictd-1.11.1 (01 Mar 2009)

  01 Mar 2009; Peter Volkov <pva@gentoo.org> +dictd-1.11.1.ebuild:
  Version bump. Most patches are applied upstream (or upstream suggested
  different solutions).

  22 Dec 2008; Raúl Porcel <armin76@gentoo.org> dictd-1.11.0.ebuild:
  Re-add ~ia64 wrt #250390

  16 Dec 2008; Peter Volkov <pva@gentoo.org> dictd-1.9.14.ebuild,
  dictd-1.10.11-r3.ebuild, dictd-1.11.0.ebuild:
  ~mips keyworded, bug #245413, bug #250390

  16 Dec 2008; Ferris McCormick <fmccor@gentoo.org> dictd-1.11.0.ebuild:
  Rekeyworded ~sparc --- Bug #250390 --- all tests pass.

  16 Dec 2008; Jeroen Roovers <jer@gentoo.org> dictd-1.11.0.ebuild:
  Marked ~hppa (bug #250390).

  15 Dec 2008; Tobias Klausmann <klausman@gentoo.org> dictd-1.11.0.ebuild:
  Keyworded on alpha, bug #250390

*dictd-1.11.0 (09 Dec 2008)

  09 Dec 2008; Peter Volkov <pva@gentoo.org>
  +files/dictd-1.11.0-automagic-plugins.patch,
  +files/dictd-1.11.0-avoid-libs-in-LDFLAGS.patch,
  +files/dictd-1.11.0-plugins-install-fix-and-cleanup.patch,
  -dictd-1.9.11-r1.ebuild, +dictd-1.11.0.ebuild:
  Version bump. Dropped keywords, due to new dependency. Removed old.

  01 Dec 2008; Brent Baude <ranger@gentoo.org> dictd-1.10.11-r2.ebuild,
  dictd-1.10.11-r3.ebuild: