@@ -30,7 +30,7 @@ DIST dictd-1.11.1.tar.gz 416958 RMD160 a212c56b7316751c3501f38bee62bd2e9e097afb 
 EBUILD dictd-1.10.11-r2.ebuild 3070 RMD160 49ac6350c3c96b09db6fa0695c859e594e8878e1 SHA1 a726c250310fc26c19564f73b28dafd47eca7e6f SHA256 3c94ecc775d830e5aa21c8e3e94302856f3edf5ad79fe49d55d8c7cfc52538ee
 EBUILD dictd-1.10.11-r3.ebuild 3408 RMD160 c929fbe762a6cf6c6e64f07e08130652b385b423 SHA1 dc1a1ad249f7e4dc2143d5e8a8fc411be953e4bf SHA256 cb3448e14a49e1fbc06e07bfed566110c7a921e8a219cf362cf0efc6d7135147
 EBUILD dictd-1.11.0.ebuild 3033 RMD160 607b8c431e38cf876d273526fda84d0b80f9cff9 SHA1 cbfa2a585c401739ee8ecb52e2682ec066e08956 SHA256 93df005885daf31cc1b4edd404a0e22ece2da517d083398119cc76735f7cccc4
-EBUILD dictd-1.11.1-r1.ebuild 2902 RMD160 b40b5ac4cb700e26b453d5c2cb01d14f3feaf5eb SHA1 7dac823311f8a8abe268d4909b4cb9b87013123a SHA256 cb2e96feabf850838c450f2ef650204baf35cebbff844ff17b5b14d1383cfe78
-EBUILD dictd-1.11.1.ebuild 2542 RMD160 4ccc9667e476fba3ad1f57a0a1bff226995679fb SHA1 e30da464ab0c3f8ae71f889b39c9f5d213a1df00 SHA256 8f0996ec273b82ac88bcacd627fe5b1787eb386c8ec6b653a307adad5d6d092b
-MISC ChangeLog 11690 RMD160 b623a8e544e6fd050255f80ac015f7f8e4b7d1c3 SHA1 3e945dd9c0a894499a675bef824875a57c37825a SHA256 f1d9182dac531dea2c241b1ab0469fe59aeebb2aa70e6f355275cd978fd5f592
+EBUILD dictd-1.11.1-r1.ebuild 2886 RMD160 3c04db079061bcf1f1485c97de13b58c988e53c4 SHA1 87bf64e70198f37b1d115d37ade90455045d94b7 SHA256 ba2b516fcf21fb780252dc85ff9c1656c1b0ffc6e2e6a6987fb01bcf33a5dc31
+EBUILD dictd-1.11.1.ebuild 2541 RMD160 23362c4897f46f7fe89dc88af92338c9713c795f SHA1 6882ac1b3c3dd0cf0abb288a4141f8d89df6e43e SHA256 b09daed817d2ca52f7e06fd1c8c18fd7d51d23d018ae14c8e520fe5731751c10
+MISC ChangeLog 11904 RMD160 097602fb89699e4e18a4229100edd77e0f2ac41e SHA1 e65460096736f4ed57db3f5d8c3247b39a991f70 SHA256 8ee746cc5df94aafdb04fc4e0864a51d42d4885da715dff20ba07c5f07e83e72
 MISC metadata.xml 533 RMD160 05bf435aedf16c014d85f490ee97dd189efa2ee6 SHA1 d0b70efe72e5c093f34144f2bdbd78c952c6f087 SHA256 e3b6b2b36dd9c080b89c868939f3604f71438492e61552150c8a030358c47782
